import_Metadata/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() - Date_of_Birth__c )/365.2425</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Jaipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tec.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M Tec.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_id__c</fullName>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c  &amp;&quot; &quot; &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c + 60</formula>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Role__r.Name</field>
                <operation>equals</operation>
                <value>Project Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary_Details__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary_Details__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Maharashtra</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( is_active__c, IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.FileDownload?file=015280000007wkn&quot;,&quot;green&quot; ,10,10 ), IMAGE(&quot;https://c.ap2.content.force.com/servlet/servlet.FileDownload?file=015280000007wks&quot;, &quot;red&quot; ,10,10) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Role__c</fullName>
        <externalId>true</externalId>
        <label>Unique Role</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is active</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Role__c</columns>
        <columns>Manager__c</columns>
        <columns>Full_Name__c</columns>
        <columns>NAME</columns>
        <columns>Unique_Role__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <description>Employee is an technical employee</description>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Age_is_between</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(AND(Age__c &gt; 21,Age__c &lt; 30))</errorConditionFormula>
        <errorMessage>“Please provide a valid Date of birth. Employee should not be less than 21 or greater then 30 .”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Working_Day</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Joining__c &gt;  Last_Working_Day__c</errorConditionFormula>
        <errorMessage>Last working day should be greater then joining date please change the resign date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation</fullName>
        <active>true</active>
        <description>If the notice period is true then you must have to enter the resignation date</description>
        <errorConditionFormula>IF(Is_on_Notice_Period__c == FALSE, NOT(ISBLANK(Resignation_Date__c  )), ISBLANK(Resignation_Date__c  ))</errorConditionFormula>
        <errorMessage>Either Unchecked the notice period or enter the resignation date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_IS_10_DIGITS</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( LEN(SSN__c ) =10)</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN must be of 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_is_a_number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER(SSN__c))</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN should be a number</errorMessage>
    </validationRules>
</CustomObject>